[package]
name = "mec11"
version = "0.2.0"
authors = ["Tapio Tallgren <tapio.tallgren@nokia.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = { version="2.0.0", default-features = false }
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"
serde_urlencoded = "0.6.1"
futures = "0.3.1"
env_logger = "0.5"
bytes = "0.5"
rand = "0.7.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
